git-svn-id: http://svn.jecat.cn/framework/0.6/trunk/framework@2577 fb4ae8c7-ff60-4932-ad58-89b0e700feac

--- a/src/template/ViewWidgetText.template.html
+++ b/src/template/ViewWidgetText.template.html
@@ -1,1 +1,5 @@
-	<input id="{=$theWidget->id()}" name="{=$theWidget->formName()}" value="{=$theWidget->valueToString()}" type="{? echo $theWidget->isPassword() ? 'password' : 'text'}" />
+<if "{=$theWidget->isTextarea()}">
+	<textarea id="{=$theWidget->id()}" name="{=$theWidget->formName()}" >{=$theWidget->valueToString()}</textarea>
+	<if:else/>
+	<input id="{=$theWidget->id()}" name="{=$theWidget->formName()}" value="{=$theWidget->valueToString()}" type="{? echo $theWidget->isPassword() ? 'password' : 'text'}"/>
+</if>
