git-svn-id: http://svn.jecat.cn/framework/0.6/trunk/framework@2582 fb4ae8c7-ff60-4932-ad58-89b0e700feac

--- a/src/template/ViewWidgetCheckBtn.template.html
+++ b/src/template/ViewWidgetCheckBtn.template.html
@@ -1,1 +1,1 @@
-<input id="{=$theWidget->id()}" name="{=$theWidget->formName()}" type="{? echo $theWidget->isCheckBox() ? 'checkbox' : 'radio'}" value="{=$theWidget->valueToString()}"/>
+<input id="{=$theWidget->id()}" name="{=$theWidget->formName()}" type="{? echo $theWidget->isCheckBox() ? 'checkbox' : 'radio'}" value="{=$theWidget->valueToString()}"  {? echo $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {? echo $theWidget->isDisabled() ? 'disabled="disabled"' : ''} />
