--- a/src/template/ViewWidgetSelect.template.html
+++ b/src/template/ViewWidgetSelect.template.html
@@ -1,4 +1,4 @@
-<select id="{=$theWidget->id()}" name="{=$theWidget->formName()}" value="{=$theWidget->valueToString()}">
+<select id="{=$theWidget->id()}" name="{=$theWidget->formName()}" value="{=$theWidget->valueToString()}" size="{=$theWidget->size()}"  {? echo $theWidget->isMultiple() ? 'multiple="multiple"' : ''}  {? echo $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {? echo $theWidget->isDisabled() ? 'disabled="disabled"' : ''} >
 	<foreach for="{=$theWidget->optionIterator()}" item="item_name_for_select">
 		<option value ="{=$item_name_for_select[0]}">{=$item_name_for_select[1]}</option>
 	</foreach>
