--- a/src/template/ViewWidgetText.template.html
+++ b/src/template/ViewWidgetText.template.html
@@ -1,5 +1,5 @@
 <if "{=$theWidget->isTextarea()}">
-	<textarea id="{=$theWidget->id()}" name="{=$theWidget->formName()}" >{=$theWidget->valueToString()}</textarea>
+	<textarea id="{=$theWidget->id()}" name="{=$theWidget->formName()}" {? echo $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {? echo $theWidget->isDisabled() ? 'disabled="disabled"' : ''} >{=$theWidget->valueToString()}</textarea>
 	<if:else/>
-	<input id="{=$theWidget->id()}" name="{=$theWidget->formName()}" value="{=$theWidget->valueToString()}" type="{? echo $theWidget->isPassword() ? 'password' : 'text'}"/>
+	<input id="{=$theWidget->id()}" name="{=$theWidget->formName()}" value="{=$theWidget->valueToString()}" type="{? echo $theWidget->isPassword() ? 'password' : 'text'}"  {? echo $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {? echo $theWidget->isDisabled() ? 'disabled="disabled"' : ''} />
 </if>
