--- a/src/template/ViewWidgetSelect.template.html
+++ b/src/template/ViewWidgetSelect.template.html
@@ -1,4 +1,4 @@
-<select id="{=$theWidget->id()}" name="{=$theWidget->formName()}" size="{=$theWidget->size()}"  {? echo get_class($theWidget) == "jc\\mvc\\view\\widget\\SelectList" ? 'multiple="multiple"' : ''}  {? echo $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {? echo $theWidget->isDisabled() ? 'disabled="disabled"' : ''} >
+<select id="{=$theWidget->id()}" name="{? echo get_class($theWidget) == "jc\\mvc\\view\\widget\\SelectList" ? $theWidget->formName().'[]' : $theWidget->formName()}" size="{=$theWidget->size()}"  {? echo get_class($theWidget) == "jc\\mvc\\view\\widget\\SelectList" ? 'multiple="multiple"' : ''}  {? echo $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {? echo $theWidget->isDisabled() ? 'disabled="disabled"' : ''} >
 	<foreach for="{=$theWidget->optionIterator()}" item="item_name_for_select">
 		<option value ="{=$item_name_for_select[0]}" {? echo $item_name_for_select[2]? "selected=\"selected\"" : ''}>{=$item_name_for_select[1]}</option>
 	</foreach>
