git-svn-id: http://svn.jecat.cn/framework/0.6/trunk/framework@2665 fb4ae8c7-ff60-4932-ad58-89b0e700feac

--- a/src/template/ViewWidgetText.template.html
+++ b/src/template/ViewWidgetText.template.html
@@ -1,4 +1,4 @@
-<if "{=$theWidget->isTextarea()}">
+<if "{=$theWidget->isMultiple()}">
 	<textarea id="{=$theWidget->id()}" name="{=$theWidget->formName()}" {? echo $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {? echo $theWidget->isDisabled() ? 'disabled="disabled"' : ''} >{=$theWidget->valueToString()}</textarea>
 	<if:else/>
 	<input id="{=$theWidget->id()}" name="{=$theWidget->formName()}" value="{=$theWidget->valueToString()}" type="{? echo $theWidget->isPassword() ? 'password' : 'text'}"  {? echo $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {? echo $theWidget->isDisabled() ? 'disabled="disabled"' : ''} />
