for http://trac.jecat.cn/framework/ticket/4
git-svn-id: http://svn.jecat.cn/framework/0.6/trunk/framework@2679 fb4ae8c7-ff60-4932-ad58-89b0e700feac

--- a/src/template/MsgQueue.template.html
+++ b/src/template/MsgQueue.template.html
@@ -1,7 +1,9 @@
 <if "$aMsgQueue->count()">
+<ul class="jc_message_queue">
 <foreach for="$aMsgQueue->iterator()" item="aMessage" >
-<div class="{=$aMessage->type()}">
-	{=$aMessage->message()}
-</div>
+	<li class="{=$aMessage->type()}">
+		{=$aMessage->message()}
+	</li>
 </foreach>
+</ul>
 </if>
