git-svn-id: http://svn.jecat.cn/framework/0.6/trunk/framework@2697 fb4ae8c7-ff60-4932-ad58-89b0e700feac

--- a/src/template/Webpage.template.html
+++ b/src/template/Webpage.template.html
@@ -14,7 +14,11 @@
 </head>
 
 <body>
-<views />
+<if "$sContents=$theView->contents()">
+	{=$sContents}
+<if:else />
+	<views />
+</if>
 </body>
 
 </html>
