git-svn-id: http://svn.jecat.cn/framework/0.6/trunk/framework@2810 fb4ae8c7-ff60-4932-ad58-89b0e700feac

--- a/src/template/WidgetFileUpdate.template.html
+++ b/src/template/WidgetFileUpdate.template.html
@@ -1,5 +1,3 @@
 <input id="{=$theWidget->id()}" name="{=$theWidget->formName()}" type="file" {? echo $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {? echo $theWidget->isDisabled() ? 'disabled="disabled"' : ''} /><br />
-<if "$theWidget->hasUpdateFile()" >
-<a href='#'>{=$theWidget->getFileName()}</a> <span>({=$theWidget->getFileSize()})</span> <input id='{=$theWidget->formName()}_delete' type='checkbox' name='{=$theWidget->formName()}_delete' value='{=$theWidget->getFileName()}'/><label for='{=$theWidget->formName()}_delete' >删除</label>
-</if>
+<a href='{=$theWidget->getFileUrl()}'>{=$theWidget->getFileName()}</a> <span>({=$theWidget->getFileSize()})</span> <input id='{=$theWidget->formName()}_delete' type='checkbox' name='{=$theWidget->formName()}_delete' value='{=$theWidget->getFileName()}'/><label for='{=$theWidget->formName()}_delete' >删除</label>
 <br />
