+ Relocater::notBack, backToReferer

--- a/src/template/Relocater.html
+++ b/src/template/Relocater.html
@@ -4,14 +4,18 @@
 		{=$theController->title()}
 	</div>
 	
-	<a href="{=$theController->url()}">
-		正在重定向当前网页 ... ...
-	</a>
+	<if "$theController->url()">
 	
-	<script>
-	setTimeout(function(){
-		location = "{=$theController->url()}" ;
-	},1000*{=$theController->waitSec()});
-	</script>
+		<a href="{=$theController->url()}">
+			正在重定向当前网页 ... ...
+		</a>
+		
+		<script>
+		setTimeout(function(){
+			location = "{=$theController->url()}" ;
+		},1000*{=$theController->waitSec()});
+		</script>
 
+	</if>
+	
 </div>
