--- a/src/template/WidgetPaginator.template.html
+++ b/src/template/WidgetPaginator.template.html
@@ -1,7 +1,7 @@
-<if "$theWidget->attributeBool('showfirst',true)" >
+<if "$theWidget->attributeBool('showfirst',true) and $theWidget->totalPageCount() >=1" >
     <a href="{=$theWidget->pageUrl(1)}"{=($theWidget->attribute("onclick",null)===null?'':('onclick='."'".$theWidget->attribute("onclick",null)."'") ) }>第一页</a>
 </if>
-<if "$theWidget->attributeBool('showpre',true) && $theWidget->currentPageNum() != 1" >
+<if "$theWidget->attributeBool('showpre',true) && $theWidget->currentPageNum() > 1" >
     <a href="{=$theWidget->pageUrl($theWidget->currentPageNum() -1 )}"{=($theWidget->attribute("onclick",null)===null?'':('onclick='."'".$theWidget->attribute("onclick",null)."'") ) }>上一页</a>
 </if>
 <foreach for='{=$theWidget->pageNumList()}' item='index'>
@@ -11,12 +11,12 @@
 	    <a href="{=$theWidget->pageUrl($index)}"{=($theWidget->attribute("onclick",null)===null?'':('onclick='."'".$theWidget->attribute("onclick",null)."'") ) }>第{=$index}页</a>
 	</if>
 </foreach>
-<if "{=$theWidget->attributeBool('shownext',true) && $theWidget->currentPageNum() != $theWidget->totalPageCount() }" >
+<if "{=$theWidget->attributeBool('shownext',true) && $theWidget->currentPageNum() < $theWidget->totalPageCount() }" >
     <a href="{=$theWidget->pageUrl($theWidget->currentPageNum() +1 )}"{=($theWidget->attribute("onclick",null)===null?'':('onclick='."'".$theWidget->attribute("onclick",null)."'") ) }>下一页</a>
 </if>
-<if "{=$theWidget->attributeBool('showlast',true)}" >
+<if "{=$theWidget->attributeBool('showlast',true)} and $theWidget->totalPageCount() >=1" >
     <a href="{=$theWidget->pageUrl($theWidget->totalPageCount()  )}"{=($theWidget->attribute("onclick",null)===null?'':('onclick='."'".$theWidget->attribute("onclick",null)."'") ) }>最后一页</a>
 </if>
-<if "{=$theWidget->attributeBool('showtotal',true)}" >
+<if "{=$theWidget->attributeBool('showtotal',true)} and $theWidget->totalPageCount() >=1" >
     共{=$theWidget->totalPageCount()}页
 </if>
