show and hide alone

--- a/src/template/WidgetItem.template.html
+++ b/src/template/WidgetItem.template.html
@@ -1,5 +1,11 @@
-<li>id:{=$theWidget->id()},title:{=$theWidget->title()}
-	<if "$theWidget->parentMenu() != null">父菜单：{=$theWidget->parentMenu()->id();}</if>
+<li
+	id='{=$theWidget->id()}'
+	{=$theWidget->getCssClassString()}
+	onclick="{#? if($theWidget->subMenu() != null){ #}jc.mvc.view.widget.menu.base.item_onActive(this);{#? } #}";
+	
+>
+	id:{=$theWidget->id()},title:{=$theWidget->title()}}
+	<if "$theWidget->parentMenu() !== null">父菜单：{=$theWidget->parentMenu()->id()}</if>
 	<if "$theWidget->isShowContinue()" >
 		<widget instance="$theWidget->subMenu()" />
 	</if>
