--- a/src/template/WidgetItem.template.html
+++ b/src/template/WidgetItem.template.html
@@ -4,8 +4,8 @@
 	onclick="{#? if($theWidget->subMenu() != null){ #}jc.mvc.view.widget.menu.base.item_onActive(this);{#? } #}";
 	
 >
-	id:{=$theWidget->showId()},title:{=$theWidget->title()}}
-	<if "$theWidget->parentMenu() !== null">父菜单：{=$theWidget->parentMenu()->id()}</if>
+	{=$theWidget->title()}
+<!--	<if "$theWidget->parentMenu() !== null">父菜单：{=$theWidget->parentMenu()->id()}</if> -->
 	<if "$theWidget->isShowContinue()" >
 		<widget instance="$theWidget->subMenu()" />
 	</if>
