show and hide menu by js

--- a/src/template/WidgetItem.template.html
+++ b/src/template/WidgetItem.template.html
@@ -1,10 +1,10 @@
 <li
 	id='{=$theWidget->showId(true)}'
 	{=$theWidget->getCssClassString()}
-	onclick="{#? if($theWidget->subMenu() != null){ #}jc.mvc.view.widget.menu.base.item_onActive(this);{#? } #}";
-	
+	onmouseover = "jc.mvc.view.widget.menu.base.item_onActive(this);"
+	onmouseout = "jc.mvc.view.widget.menu.base.item_onDisactive(this);"
 >
-	{=$theWidget->title()}
+	{=$theWidget->showId()}
 <!--	<if "$theWidget->parentMenu() !== null">父菜单：{=$theWidget->parentMenu()->id()}</if> -->
 	<if "$theWidget->isShowContinue()" >
 		<widget instance="$theWidget->subMenu()" />
