--- a/src/template/WidgetItem.template.html
+++ b/src/template/WidgetItem.template.html
@@ -4,7 +4,7 @@
 	onmouseover = "jc.mvc.view.widget.menu.base.item_onActive(this);"
 	onmouseout = "jc.mvc.view.widget.menu.base.item_onDisactive(this);"
 >
-	{=$theWidget->showId()}
+	{=$theWidget->title()}
 <!--	<if "$theWidget->parentMenu() !== null">父菜单：{=$theWidget->parentMenu()->id()}</if> -->
 	<if "$theWidget->isShowContinue()" >
 		<widget instance="$theWidget->subMenu()" />
