--- a/src/template/WidgetMenu.template.html
+++ b/src/template/WidgetMenu.template.html
@@ -1,7 +1,7 @@
 <js src="jc:js/mvc/view/widget/menu/base.js" />
-<ul id='{=$theWidget->showId(true)}' style='border:solid 1px' {=$theWidget->getStyleString()} {=$theWidget->getCssClassString()}>
-<!-- <if "$theWidget->parentItem() != null">父项目：{=$theWidget->parentItem()->title();}</if> -->
+<ul id='{=$theWidget->showId(true)}' {=$theWidget->getStyleString()} {=$theWidget->getCssClassString()}>{=$theWidget->title()}
+<!-- <if "$theWidget->parentItem() != null">父项目：{=$theWidget->parentItem()->title();}</if> -->{*645645}
 <foreach for='$theWidget->itemIterator()' item='item'>
-	<widget instance='$item'/>
+	<widget instance='$item' />
 </foreach>
 </ul>
