--- a/src/template/WidgetMenu.template.html
+++ b/src/template/WidgetMenu.template.html
@@ -1,7 +1,16 @@
 <js src="jc:js/mvc/view/widget/menu/base.js" />
-<ul id='{=$theWidget->showId(true)}' {=$theWidget->getStyleString()} {=$theWidget->getCssClassString()}>{=$theWidget->title()}
+<script type="text/javascript">
+var o=new jc.mvc.view.widget.menu.base.jsobject("{=$theWidget->showId(true)}");
+o.setAttribute('direction','{=$theWidget->getDirection()}');
+o.setAttribute('alone','{=$theWidget->getIndependence()}');
+<if "$theWidget->parentItem() != null && $theWidget->parentItem()->parentMenu()">
+	o.setParentId('{=$theWidget->parentItem()->parentMenu()->showId()}');
+</if>
+</script>
+<ul id='{=$theWidget->showId()}' {=$theWidget->getStyleString()} {=$theWidget->getCssClassString()}>{=$theWidget->title()}
 <!-- <if "$theWidget->parentItem() != null">父项目：{=$theWidget->parentItem()->title();}</if> -->{*645645}
 <foreach for='$theWidget->itemIterator()' item='item'>
 	<widget instance='$item' />
 </foreach>
 </ul>
+
