--- a/src/template/Relocater.html
+++ b/src/template/Relocater.html
@@ -1,19 +1,19 @@
 <div>
 
 	<div>
-		{=$theController->message()}
+		{=$message}
 	</div>
 	
-	<if "$theController->url()">
+	<if "$url">
 	
-		<a href="{=$theController->url()}">
-			正在重定向当前网页 ... ...
+		<a href="{=$url}">
+			{=$linkText}
 		</a>
 		
 		<script>
 		setTimeout(function(){
-			location = "{=$theController->url()}" ;
-		},1000*{=$theController->waitSec()});
+			location = "{=$url}" ;
+		},1000*{=$waitingSec});
 		</script>
 
 	</if>
