--- a/src/template/WidgetMenu.template.html
+++ b/src/template/WidgetMenu.template.html
@@ -8,7 +8,7 @@ o.setAttribute('alone','{=$theWidget->getIndependence()}');
 </if>
 </script>
 <ul id='{=$theWidget->showId()}' {=$theWidget->getStyleString()} {=$theWidget->getCssClassString()}>{=$theWidget->title()}
-<!-- <if "$theWidget->parentItem() != null">父项目：{=$theWidget->parentItem()->title();}</if> -->{*645645}
+<!-- <if "$theWidget->parentItem() != null">父项目：{=$theWidget->parentItem()->title();}</if> -->
 <foreach for='$theWidget->itemIterator()' item='item'>
 	<widget instance='$item' />
 </foreach>
