--- a/src/template/WidgetMenu.template.html
+++ b/src/template/WidgetMenu.template.html
@@ -1,3 +1,4 @@
+<css src="jc:style/widget/menu.css" />
 <js src="jc:js/mvc/view/widget/menu/base.js" />
 <script type="text/javascript">
 var o=new jc.mvc.view.widget.menu.base.jsobject("{=$theWidget->showId(true)}");
