--- a/public/style/style.css
+++ b/public/style/style.css
@@ -42,10 +42,10 @@
 
 /* 视图布局框架 */
 .org_jecat_framework_view-layout-frame{
-	padding-top: 5px ;
+	/*padding-top: 5px ;
 	padding-left: 5px ;
 	padding-right: 5px ;
-	padding-bottom: 10px ;
+	padding-bottom: 10px ;*/
 }
 
 /* 视图布局框架中的横向布局视图 */
