--- a/template/WidgetItem.template.html
+++ b/template/WidgetItem.template.html
@@ -1,7 +1,8 @@
-<li	id='{=$theWidget->showId(true)}' {=$theWidget->getCssClassString()}	onmouseover = "jc.mvc.view.widget.menu.base.item_onActive(this);" onmouseout = "jc.mvc.view.widget.menu.base.item_onDisactive(this);">
+<li	id='{=$theWidget->id()}' {=$theWidget->getCssClassString()}>
 	{=$theWidget->html()}
-	<!-- <if "$theWidget->parentMenu() !== null">父菜单：{=$theWidget->parentMenu()->id()}</if> -->
-	<if "$theWidget->isShowContinue()" >
+	
+	<if "$theWidget->isDisplaySubMenu()" >
 		<widget instance="$theWidget->subMenu()" />
 	</if>
 </li>
+<script>jc.mvc.view.widget.menu.base.bindItemEvent('{=$theWidget->id()}')</script>
