--- a/template/WidgetMenu.template.html
+++ b/template/WidgetMenu.template.html
@@ -2,6 +2,7 @@
 <foreach for='$theWidget->itemIterator()' item='aItem'>
 	<widget instance='$aItem' />
 </foreach>
+<li class="clear"></li>
 </ul>
 
 <script>{= $theWidget->generateJsCode() }</script>
