--- a/template/WidgetText.template.html
+++ b/template/WidgetText.template.html
@@ -1,5 +1,5 @@
 <if "{=$theWidget->isMultiple()}">
 	<textarea id="{=$theWidget->id()}" name="{=$theWidget->formName()}" {= $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {= $theWidget->isDisabled() ? 'disabled="disabled"' : ''} {=$theWidget->displayInputAttributes()} >{=$theWidget->valueToString()}</textarea>
 <if:else/>
-	<input id="{=$theWidget->id()}" name="{=$theWidget->formName()}" value="{=$theWidget->valueToString()}" type="{=$theWidget->typeForHtml()}"  {= $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {= $theWidget->isDisabled() ? 'disabled="disabled"' : ''} {=$theWidget->displayInputAttributes()} />
+	<input id="{=$theWidget->id()}" name="{=$theWidget->formName()}" value="{=htmlspecialchars($theWidget->valueToString())}" type="{=$theWidget->typeForHtml()}"  {= $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {= $theWidget->isDisabled() ? 'disabled="disabled"' : ''} {=$theWidget->displayInputAttributes()} />
 </if>
