update WidgetCompiler and fix Menu

--- a/template/WidgetItem.template.html
+++ b/template/WidgetItem.template.html
@@ -14,6 +14,6 @@
 	</if>
 	
 	<if "$theWidget->isDisplaySubMenu()" >
-		<widget instance="$theWidget->subMenu()"  />
+		<widget instance="$theWidget->subMenu()" attr.showDepths="$attr['showDepths']" attr.showDepths.type="expression" />
 	</if>
 </li>
