--- a/template/WidgetFileUpdate.template.html
+++ b/template/WidgetFileUpdate.template.html
@@ -1,4 +1,4 @@
-<input id="{=$theWidget->id()}" name="{=$theWidget->formName()}" type="file" {= $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {= $theWidget->isDisabled() ? 'disabled="disabled"' : ''} /><br />
+<input ignore="1" id="{=$theWidget->id()}" name="{=$theWidget->formName()}" type="file" {= $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {= $theWidget->isDisabled() ? 'disabled="disabled"' : ''} /><br />
 <if "$theWidget->hasFile()" >
 <a href='{=$theWidget->getFileUrl()}'>{=$theWidget->getFileName()}</a> <span>({=$theWidget->getFileSize()})</span> <input id='{=$theWidget->formName()}_delete' type='checkbox' name='{=$theWidget->formName()}_delete' value='{=$theWidget->getFileName()}'/><label for='{=$theWidget->formName()}_delete' >删除</label>
 </if>
