--- a/template/WidgetText.template.html
+++ b/template/WidgetText.template.html
@@ -1,5 +1,5 @@
 <if "{=$theWidget->isMultiple()}">
-	<textarea ignore='1' id="{=$theWidget->id()}" name="{=$theWidget->formName()}" {= $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {= $theWidget->isDisabled() ? 'disabled="disabled"' : ''} {=$theWidget->displayInputAttributes()} >{=$theWidget->valueToString()}</textarea>
+	<textarea ignore='1' id="{=$theWidget->id()}" name="{=$theWidget->formName()}" {= $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {= $theWidget->isDisabled() ? 'disabled="disabled"' : ''} {=$theWidget->displayInputAttributes($attr)} >{=$theWidget->valueToString()}</textarea>
 <if:else/>
-	<input ignore='1' id="{=$theWidget->id()}" name="{=$theWidget->formName()}" value="{=$theWidget->valueToString()}" type="{=$theWidget->typeForHtml()}"  {= $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {= $theWidget->isDisabled() ? 'disabled="disabled"' : ''} {=$theWidget->displayInputAttributes()} />
+	<input ignore='1' id="{=$theWidget->id()}" name="{=$theWidget->formName()}" value="{=$theWidget->valueToString()}" type="{=$theWidget->typeForHtml()}"  {= $theWidget->isReadOnly() ? 'readonly="readonly"' : ''}  {= $theWidget->isDisabled() ? 'disabled="disabled"' : ''} {=$theWidget->displayInputAttributes($attr)} />
 </if>
