widget menu 通过template file加载 js, css

--- a/template/WidgetMenu.template.html
+++ b/template/WidgetMenu.template.html
@@ -1,3 +1,6 @@
+<js src="org.jecat.framework:js/mvc/view/widget/menu.js" />
+<css src="org.jecat.framework:style/widget/menu.css" />
+
 <ul id='{=$theWidget->id()}' 
 	{=$theWidget->getStyleString()}
 	{=$theWidget->getCssClassString()}
